--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,15 +8,10 @@
             <button class="nav-toggle" aria-expanded="false" aria-controls="menu">☰</button>
             <ul id="menu" class="menu">
                 <li><a href="/">Trang chủ</a></li>
-                <li><a href="#">Đổi pin</a></li>
-                <li><a href="#">Liên kết</a></li>
-                <li class="has-sub">
-                    <a href="#" aria-haspopup="true" aria-expanded="false">Đặt lịch</a>
-                    <ul class="submenu" aria-label="Đặt lịch">
-                        <li><a href="#">Tìm kiếm trạm gần nhất</a></li>
-                        <li><a href="#">Đặt lịch đổi pin</a></li>
-                    </ul>
-                </li>
+                <li><a href="login">Đổi pin</a></li>
+                <li><a href="login">Liên kết</a></li>
+                <li><a href="login">Đặt lịch</a></li>
+                <li><a href="packages">Đăng ký gói</a></li>
             </ul>
         </nav>
     </div>
