--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -66,6 +66,7 @@
 
                     if (result.success) {
                         Swal.fire({
+                            heightAuto: false,
                             icon: 'success',
                             title: 'Đăng nhập thành công',
                             text: 'Chào mừng bạn quay trở lại.',
@@ -75,6 +76,7 @@
                         });
                     } else {
                         Swal.fire({
+                            heightAuto: false,
                             icon: 'error',
                             title: 'Lỗi',
                             text: result.message || 'Đăng nhập thất bại!'
